<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.dit.adsw.imc_42.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IMCTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/editAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintAltura"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textDIMAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DIMaltura" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso" />

        <EditText
            android:id="@+id/editPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintPeso"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textDIMPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DIMpeso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCalcIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculaIMC" />

        <TextView
            android:id="@+id/textResIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/IMCTexto"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textGenero"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/genero" />

        <RadioGroup
            android:id="@+id/radioGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButtonHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generoHombre" />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generoMujer" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editEdad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCalcIGCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculaIGCE" />

        <TextView
            android:id="@+id/textResIGCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/IGCETexto"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>
